# aicustomify-backend

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: constants.py  main.py
app/models/: __init__.py  company_embeddings.py  test.py
app/repositories/: __init__.py  company_embeddings.py  config.py  embeddings_model.py  test.py
app/routes/: __init__.py  search_text_in_test_service.py  test.py
app/schemas/: __init__.py  company_embeddings.py  objectid.py  test.py
app/services/: __init__.py  chat_embeddings_example.py  comidas_ricas_sa_services_example.csv
